# mixmil

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: histopathology_camelyon16.ipynb  new_scatter.ipynb  reduced_histopathology_camelyon16.ipynb  simulation.ipynb
mixmil/: __init__.py  data.py  main.py  model.py  paths.py  posterior.py  simulation.py  utils.py
notebooks/: check_initialization.ipynb  reduce_camelyon_dataset_size.ipynb
scripts/: dsmil_data_download.py
tests/: test_model.py  test_simulation.py
