[project]
name = "mixmil"
dynamic = ["version"]
description = "Attention-based Multi-instance Mixed Models"
readme = "README.md"
license.file = "LICENSE"
authors = [
    { name = "Jan Engelmann", email = "jan.engelmann@helmholtz-munich.de" },
    { name = "Alessandro Palma", email = "alessandro.palma@helmholtz-munich.de" },
    { name = "Paolo Casale", email = "francescopaolo.casale@helmholtz-munich.de" },
]
dependencies = [
    "numpy>=1.22.0",
    "torch>=1.4.0",
    "torch_scatter>=2.0.1",
    "scipy>=1.8.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.0.0",
    "statsmodels>=0.11.0",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/AIH-SGML/mixmil"
"Bug Tracker" = "https://github.com/AIH-SGML/mixmil/issues"
Discussions = "https://github.com/AIH-SGML/mixmil/discussions"

[project.optional-dependencies]
experiments = ["anndata>=0.8.0", "jupyterlab>=3.0.0"]
test = ["pytest>=6.0.0"]
all = ["mixmil[experiments,test]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mixmil"]

[tool.hatch]
version.path = "mixmil/__init__.py"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
ignore = ["E741"]
